Fix selected usage type too wide.

--- a/www_2016/styles/usecases.css
+++ b/www_2016/styles/usecases.css
@@ -270,7 +270,6 @@ h3.defis {
   color: white;
 }
 .listpopin .header img {
-  width: 100%;
   height: 100%;
 }
 
